# mato

./: CMakeLists.txt  README.md  build.sh
levels/: 01.level  02.level  03.level  04.level  05.level
scripts/: generate_levels.py
src/: main.cpp
src/audio/: SoundPlayer.cpp  SoundPlayer.hpp
src/editor/: Editor.cpp  Editor.hpp  EditorRenderer.cpp  EditorRenderer.hpp  LevelFileIO.cpp  LevelFileIO.hpp  main.cpp
src/effects/: CompositeEffect.cpp  CompositeEffect.hpp  Effect.hpp  EffectEngine.cpp  EffectEngine.hpp
src/effects/gfx/: CelebrationEffect.cpp  CelebrationEffect.hpp  DeathEffect.cpp  DeathEffect.hpp  FoodEatEffect.cpp  FoodEatEffect.hpp
src/effects/sfx/: DeathSoundEffect.hpp  FoodEatSoundEffect.hpp  LevelCompleteSoundEffect.hpp  SoundEffect.cpp  SoundEffect.hpp
src/game/: CelebrationEffect.cpp  CelebrationEffect.hpp  DeathEffect.cpp  DeathEffect.hpp  Effect.hpp  EffectEngine.cpp  EffectEngine.hpp  FoodEatEffect.cpp  FoodEatEffect.hpp  FoodReward.cpp  FoodReward.hpp  FoodSpawner.cpp  FoodSpawner.hpp  GameState.cpp  GameState.hpp  LevelData.cpp  LevelData.hpp  Types.hpp
src/input/: Control.hpp  KeyboardControl.cpp  KeyboardControl.hpp
src/render/: CellColorPicker.hpp  CellRenderer.cpp  CellRenderer.hpp  EffectEngine.cpp  EffectEngine.hpp  GameText.cpp  GameText.hpp  RenderAssetsFactory.cpp  RenderAssetsFactory.hpp  SnakeCellColorPicker.cpp  SnakeCellColorPicker.hpp  SnakeCellRenderer.cpp  SnakeCellRenderer.hpp  StatusRenderer.cpp  StatusRenderer.hpp  WindowTitle.cpp  WindowTitle.hpp
src/render/effects/: CelebrationEffect.cpp  CelebrationEffect.hpp  DeathEffect.cpp  DeathEffect.hpp  Effect.hpp  FoodEatEffect.cpp  FoodEatEffect.hpp
